kubernetes/apps/default/minio-external/app/endpoints.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: minio-external
subsets:
- addresses:
  - ip: ${SECRET_NAS_IP}
  ports:
  - name: http
    port: 9000
    protocol: TCP
  - name: console
    port: 9002
    protocol: TCP
