kubernetes/apps/default/minio-external/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app minio-external
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
spec:
  ingressClassName: external
  rules:
  - host: &host media.${SECRET_DOMAIN}
    http:
      paths:
      - backend:
          service:
            name: *app
            port:
              number: 80
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - *host
